src/objects/SBA_Session_Settings__mdt.object
<CustomObject>
    <description>Store security configurations related to user sessions</description>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates active setting.</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>max_preferred_user_sessions__c</fullName>
        <description>Maximum concurrent user sessions allowed for preferred user.</description>
        <label>max_preferred_user_sessions</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>max_std_user_sessions__c</fullName>
        <description>Max concurrent session a standard user can have.</description>
        <label>max_std_user_sessions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>preferred_user_profile_list__c</fullName>
        <description>Comma separated list of preferred user profile names. e.g: System Administrator</description>
        <inlineHelpText>Comma separated list of preferred user profile names. e.g: System Administrator</inlineHelpText>
        <label>preferred user profile list</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SBA Session Setting</label>
    <pluralLabel>SBA Session Settings</pluralLabel>
    <validationRules>
        <fullName>Check_one_active_session_setting</fullName>
        <active>false</active>
        <errorConditionFormula>(isActive__c == true)</errorConditionFormula>
        <errorMessage>Cannot have more that one active session setting</errorMessage>
    </validationRules>
</CustomObject>